src/main/java/proto/antlr/grammar/protoParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 grammar\\proto.g 2012-05-17 13:39:29

	package grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class protoParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "INT", "STRING", "COMMENT", "WS", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "'prototype'", "'('", "')'", "'{'", "'}'", "'finally'", "'globally'", "';'", "'until'", "'release'", "'if'", "'or'", "'and'", "'not'", "'=='", "'!='", "'interface'", "','", "'void'", "'state'", "'number'", "'bool'", "'string'", "'object'", "'['", "']'", "'class'", "'<'", "'<<'", "'='", "'die'", "'print'", "'return'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'nan'", "'nil'", "'new'", "'else'", "'for'", "'while'", "'do'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int OCTAL_ESC=12;
    public static final int ID=4;
    public static final int EOF=-1;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int ESC_SEQ=9;
    public static final int T__16=16;
    public static final int T__51=51;
    public static final int T__15=15;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__59=59;
    public static final int COMMENT=7;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int UNICODE_ESC=11;
    public static final int HEX_DIGIT=10;
    public static final int INT=5;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=8;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int STRING=6;

    // delegates
    // delegators


        public protoParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public protoParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return protoParser.tokenNames; }
    public String getGrammarFileName() { return "grammar\\proto.g"; }



    // $ANTLR start "program"
    // grammar\\proto.g:7:1: program : ( statement )* ;
    public final void program() throws RecognitionException {
        try {
            // grammar\\proto.g:8:5: ( ( statement )* )
            // grammar\\proto.g:8:7: ( statement )*
            {
            // grammar\\proto.g:8:7: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==13||LA1_0==29||LA1_0==39) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // grammar\\proto.g:8:9: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program29);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "statement"
    // grammar\\proto.g:11:1: statement : ( interface_decl | class_decl | proto_decl );
    public final void statement() throws RecognitionException {
        try {
            // grammar\\proto.g:12:5: ( interface_decl | class_decl | proto_decl )
            int alt2=3;
            switch ( input.LA(1) ) {
            case 29:
                {
                alt2=1;
                }
                break;
            case 39:
                {
                alt2=2;
                }
                break;
            case 13:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // grammar\\proto.g:12:7: interface_decl
                    {
                    pushFollow(FOLLOW_interface_decl_in_statement54);
                    interface_decl();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // grammar\\proto.g:12:24: class_decl
                    {
                    pushFollow(FOLLOW_class_decl_in_statement58);
                    class_decl();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // grammar\\proto.g:12:37: proto_decl
                    {
                    pushFollow(FOLLOW_proto_decl_in_statement62);
                    proto_decl();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statement"


    // $ANTLR start "proto_decl"
    // grammar\\proto.g:15:1: proto_decl : 'prototype' ID '(' parameters ')' '{' ( spec_decl )* '}' ;
    public final void proto_decl() throws RecognitionException {
        try {
            // grammar\\proto.g:16:5: ( 'prototype' ID '(' parameters ')' '{' ( spec_decl )* '}' )
            // grammar\\proto.g:16:7: 'prototype' ID '(' parameters ')' '{' ( spec_decl )* '}'
            {
            match(input,13,FOLLOW_13_in_proto_decl84); 
            match(input,ID,FOLLOW_ID_in_proto_decl86); 
            match(input,14,FOLLOW_14_in_proto_decl88); 
            pushFollow(FOLLOW_parameters_in_proto_decl90);
            parameters();

            state._fsp--;

            match(input,15,FOLLOW_15_in_proto_decl92); 
            match(input,16,FOLLOW_16_in_proto_decl94); 
            // grammar\\proto.g:16:45: ( spec_decl )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||LA3_0==14||(LA3_0>=18 && LA3_0<=19)||LA3_0==26) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // grammar\\proto.g:16:47: spec_decl
            	    {
            	    pushFollow(FOLLOW_spec_decl_in_proto_decl98);
            	    spec_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            match(input,17,FOLLOW_17_in_proto_decl103); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "proto_decl"


    // $ANTLR start "spec_decl"
    // grammar\\proto.g:19:1: spec_decl : ( ( 'finally' | 'globally' ) spec_expression ';' | spec_expression ( 'until' | 'release' | 'if' ) spec_expression ';' );
    public final void spec_decl() throws RecognitionException {
        try {
            // grammar\\proto.g:20:5: ( ( 'finally' | 'globally' ) spec_expression ';' | spec_expression ( 'until' | 'release' | 'if' ) spec_expression ';' )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=18 && LA4_0<=19)) ) {
                alt4=1;
            }
            else if ( (LA4_0==ID||LA4_0==14||LA4_0==26) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // grammar\\proto.g:20:7: ( 'finally' | 'globally' ) spec_expression ';'
                    {
                    if ( (input.LA(1)>=18 && input.LA(1)<=19) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_spec_expression_in_spec_decl128);
                    spec_expression();

                    state._fsp--;

                    match(input,20,FOLLOW_20_in_spec_decl130); 

                    }
                    break;
                case 2 :
                    // grammar\\proto.g:20:54: spec_expression ( 'until' | 'release' | 'if' ) spec_expression ';'
                    {
                    pushFollow(FOLLOW_spec_expression_in_spec_decl134);
                    spec_expression();

                    state._fsp--;

                    if ( (input.LA(1)>=21 && input.LA(1)<=23) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_spec_expression_in_spec_decl150);
                    spec_expression();

                    state._fsp--;

                    match(input,20,FOLLOW_20_in_spec_decl152); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "spec_decl"


    // $ANTLR start "spec_expression"
    // grammar\\proto.g:23:1: spec_expression : ( ( '(' or_spec ')' ) | ( or_spec ) );
    public final void spec_expression() throws RecognitionException {
        try {
            // grammar\\proto.g:24:5: ( ( '(' or_spec ')' ) | ( or_spec ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==14) ) {
                alt5=1;
            }
            else if ( (LA5_0==ID||LA5_0==26) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // grammar\\proto.g:24:7: ( '(' or_spec ')' )
                    {
                    // grammar\\proto.g:24:7: ( '(' or_spec ')' )
                    // grammar\\proto.g:24:9: '(' or_spec ')'
                    {
                    match(input,14,FOLLOW_14_in_spec_expression175); 
                    pushFollow(FOLLOW_or_spec_in_spec_expression177);
                    or_spec();

                    state._fsp--;

                    match(input,15,FOLLOW_15_in_spec_expression179); 

                    }


                    }
                    break;
                case 2 :
                    // grammar\\proto.g:24:29: ( or_spec )
                    {
                    // grammar\\proto.g:24:29: ( or_spec )
                    // grammar\\proto.g:24:31: or_spec
                    {
                    pushFollow(FOLLOW_or_spec_in_spec_expression187);
                    or_spec();

                    state._fsp--;


                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "spec_expression"


    // $ANTLR start "or_spec"
    // grammar\\proto.g:27:1: or_spec : and_spec ( 'or' and_spec )? ;
    public final void or_spec() throws RecognitionException {
        try {
            // grammar\\proto.g:28:5: ( and_spec ( 'or' and_spec )? )
            // grammar\\proto.g:28:7: and_spec ( 'or' and_spec )?
            {
            pushFollow(FOLLOW_and_spec_in_or_spec210);
            and_spec();

            state._fsp--;

            // grammar\\proto.g:28:16: ( 'or' and_spec )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==24) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // grammar\\proto.g:28:18: 'or' and_spec
                    {
                    match(input,24,FOLLOW_24_in_or_spec214); 
                    pushFollow(FOLLOW_and_spec_in_or_spec216);
                    and_spec();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "or_spec"


    // $ANTLR start "and_spec"
    // grammar\\proto.g:30:1: and_spec : not_spec ( 'and' not_spec )? ;
    public final void and_spec() throws RecognitionException {
        try {
            // grammar\\proto.g:31:5: ( not_spec ( 'and' not_spec )? )
            // grammar\\proto.g:31:7: not_spec ( 'and' not_spec )?
            {
            pushFollow(FOLLOW_not_spec_in_and_spec235);
            not_spec();

            state._fsp--;

            // grammar\\proto.g:31:16: ( 'and' not_spec )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==25) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // grammar\\proto.g:31:18: 'and' not_spec
                    {
                    match(input,25,FOLLOW_25_in_and_spec239); 
                    pushFollow(FOLLOW_not_spec_in_and_spec241);
                    not_spec();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "and_spec"


    // $ANTLR start "not_spec"
    // grammar\\proto.g:34:1: not_spec : ( 'not' )? spec ;
    public final void not_spec() throws RecognitionException {
        try {
            // grammar\\proto.g:35:5: ( ( 'not' )? spec )
            // grammar\\proto.g:35:7: ( 'not' )? spec
            {
            // grammar\\proto.g:35:7: ( 'not' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==26) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // grammar\\proto.g:35:9: 'not'
                    {
                    match(input,26,FOLLOW_26_in_not_spec267); 

                    }
                    break;

            }

            pushFollow(FOLLOW_spec_in_not_spec272);
            spec();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "not_spec"


    // $ANTLR start "spec"
    // grammar\\proto.g:38:1: spec : ID ( '==' ID | '!=' ID )* ;
    public final void spec() throws RecognitionException {
        try {
            // grammar\\proto.g:39:5: ( ID ( '==' ID | '!=' ID )* )
            // grammar\\proto.g:39:7: ID ( '==' ID | '!=' ID )*
            {
            match(input,ID,FOLLOW_ID_in_spec293); 
            // grammar\\proto.g:39:10: ( '==' ID | '!=' ID )*
            loop9:
            do {
                int alt9=3;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==27) ) {
                    alt9=1;
                }
                else if ( (LA9_0==28) ) {
                    alt9=2;
                }


                switch (alt9) {
            	case 1 :
            	    // grammar\\proto.g:39:12: '==' ID
            	    {
            	    match(input,27,FOLLOW_27_in_spec297); 
            	    match(input,ID,FOLLOW_ID_in_spec299); 

            	    }
            	    break;
            	case 2 :
            	    // grammar\\proto.g:39:22: '!=' ID
            	    {
            	    match(input,28,FOLLOW_28_in_spec303); 
            	    match(input,ID,FOLLOW_ID_in_spec305); 

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "spec"


    // $ANTLR start "interface_decl"
    // grammar\\proto.g:42:1: interface_decl : 'interface' ID '{' ( method_decl )* '}' ;
    public final void interface_decl() throws RecognitionException {
        try {
            // grammar\\proto.g:43:5: ( 'interface' ID '{' ( method_decl )* '}' )
            // grammar\\proto.g:43:7: 'interface' ID '{' ( method_decl )* '}'
            {
            match(input,29,FOLLOW_29_in_interface_decl326); 
            match(input,ID,FOLLOW_ID_in_interface_decl328); 
            match(input,16,FOLLOW_16_in_interface_decl330); 
            // grammar\\proto.g:43:26: ( method_decl )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( ((LA10_0>=31 && LA10_0<=36)) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // grammar\\proto.g:43:28: method_decl
            	    {
            	    pushFollow(FOLLOW_method_decl_in_interface_decl334);
            	    method_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);

            match(input,17,FOLLOW_17_in_interface_decl339); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "interface_decl"


    // $ANTLR start "method_decl"
    // grammar\\proto.g:46:1: method_decl : type ID '(' arguments ')' ';' ;
    public final void method_decl() throws RecognitionException {
        try {
            // grammar\\proto.g:47:5: ( type ID '(' arguments ')' ';' )
            // grammar\\proto.g:47:7: type ID '(' arguments ')' ';'
            {
            pushFollow(FOLLOW_type_in_method_decl360);
            type();

            state._fsp--;

            match(input,ID,FOLLOW_ID_in_method_decl362); 
            match(input,14,FOLLOW_14_in_method_decl364); 
            pushFollow(FOLLOW_arguments_in_method_decl366);
            arguments();

            state._fsp--;

            match(input,15,FOLLOW_15_in_method_decl368); 
            match(input,20,FOLLOW_20_in_method_decl370); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "method_decl"


    // $ANTLR start "arguments"
    // grammar\\proto.g:50:1: arguments : ( type ID ( ',' type ID )* )? ;
    public final void arguments() throws RecognitionException {
        try {
            // grammar\\proto.g:51:5: ( ( type ID ( ',' type ID )* )? )
            // grammar\\proto.g:51:7: ( type ID ( ',' type ID )* )?
            {
            // grammar\\proto.g:51:7: ( type ID ( ',' type ID )* )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( ((LA12_0>=31 && LA12_0<=36)) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // grammar\\proto.g:51:9: type ID ( ',' type ID )*
                    {
                    pushFollow(FOLLOW_type_in_arguments393);
                    type();

                    state._fsp--;

                    match(input,ID,FOLLOW_ID_in_arguments395); 
                    // grammar\\proto.g:51:17: ( ',' type ID )*
                    loop11:
                    do {
                        int alt11=2;
                        int LA11_0 = input.LA(1);

                        if ( (LA11_0==30) ) {
                            alt11=1;
                        }


                        switch (alt11) {
                    	case 1 :
                    	    // grammar\\proto.g:51:19: ',' type ID
                    	    {
                    	    match(input,30,FOLLOW_30_in_arguments399); 
                    	    pushFollow(FOLLOW_type_in_arguments401);
                    	    type();

                    	    state._fsp--;

                    	    match(input,ID,FOLLOW_ID_in_arguments403); 

                    	    }
                    	    break;

                    	default :
                    	    break loop11;
                        }
                    } while (true);


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "arguments"


    // $ANTLR start "parameters"
    // grammar\\proto.g:54:1: parameters : ( big_expression ( ',' big_expression )* )? ;
    public final void parameters() throws RecognitionException {
        try {
            // grammar\\proto.g:55:5: ( ( big_expression ( ',' big_expression )* )? )
            // grammar\\proto.g:55:7: ( big_expression ( ',' big_expression )* )?
            {
            // grammar\\proto.g:55:7: ( big_expression ( ',' big_expression )* )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( ((LA14_0>=ID && LA14_0<=STRING)||LA14_0==14||LA14_0==26||LA14_0==37||(LA14_0>=53 && LA14_0<=55)) ) {
                alt14=1;
            }
            switch (alt14) {
                case 1 :
                    // grammar\\proto.g:55:9: big_expression ( ',' big_expression )*
                    {
                    pushFollow(FOLLOW_big_expression_in_parameters432);
                    big_expression();

                    state._fsp--;

                    // grammar\\proto.g:55:24: ( ',' big_expression )*
                    loop13:
                    do {
                        int alt13=2;
                        int LA13_0 = input.LA(1);

                        if ( (LA13_0==30) ) {
                            alt13=1;
                        }


                        switch (alt13) {
                    	case 1 :
                    	    // grammar\\proto.g:55:26: ',' big_expression
                    	    {
                    	    match(input,30,FOLLOW_30_in_parameters436); 
                    	    pushFollow(FOLLOW_big_expression_in_parameters438);
                    	    big_expression();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop13;
                        }
                    } while (true);


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "parameters"


    // $ANTLR start "type"
    // grammar\\proto.g:58:1: type : ( 'void' | 'state' array | 'number' array | 'bool' array | 'string' array | 'object' array );
    public final void type() throws RecognitionException {
        try {
            // grammar\\proto.g:59:5: ( 'void' | 'state' array | 'number' array | 'bool' array | 'string' array | 'object' array )
            int alt15=6;
            switch ( input.LA(1) ) {
            case 31:
                {
                alt15=1;
                }
                break;
            case 32:
                {
                alt15=2;
                }
                break;
            case 33:
                {
                alt15=3;
                }
                break;
            case 34:
                {
                alt15=4;
                }
                break;
            case 35:
                {
                alt15=5;
                }
                break;
            case 36:
                {
                alt15=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 15, 0, input);

                throw nvae;
            }

            switch (alt15) {
                case 1 :
                    // grammar\\proto.g:59:7: 'void'
                    {
                    match(input,31,FOLLOW_31_in_type465); 

                    }
                    break;
                case 2 :
                    // grammar\\proto.g:59:16: 'state' array
                    {
                    match(input,32,FOLLOW_32_in_type469); 
                    pushFollow(FOLLOW_array_in_type471);
                    array();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // grammar\\proto.g:59:32: 'number' array
                    {
                    match(input,33,FOLLOW_33_in_type475); 
                    pushFollow(FOLLOW_array_in_type477);
                    array();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // grammar\\proto.g:59:49: 'bool' array
                    {
                    match(input,34,FOLLOW_34_in_type481); 
                    pushFollow(FOLLOW_array_in_type483);
                    array();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // grammar\\proto.g:59:64: 'string' array
                    {
                    match(input,35,FOLLOW_35_in_type487); 
                    pushFollow(FOLLOW_array_in_type489);
                    array();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // grammar\\proto.g:59:81: 'object' array
                    {
                    match(input,36,FOLLOW_36_in_type493); 
                    pushFollow(FOLLOW_array_in_type495);
                    array();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "type"


    // $ANTLR start "array"
    // grammar\\proto.g:62:1: array : ( '[' ']' )* ;
    public final void array() throws RecognitionException {
        try {
            // grammar\\proto.g:63:5: ( ( '[' ']' )* )
            // grammar\\proto.g:63:7: ( '[' ']' )*
            {
            // grammar\\proto.g:63:7: ( '[' ']' )*
            loop16:
            do {
                int alt16=2;
                int LA16_0 = input.LA(1);

                if ( (LA16_0==37) ) {
                    alt16=1;
                }


                switch (alt16) {
            	case 1 :
            	    // grammar\\proto.g:63:9: '[' ']'
            	    {
            	    match(input,37,FOLLOW_37_in_array518); 
            	    match(input,38,FOLLOW_38_in_array520); 

            	    }
            	    break;

            	default :
            	    break loop16;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "array"


    // $ANTLR start "class_decl"
    // grammar\\proto.g:66:1: class_decl : 'class' ID ( '<' ID ( ',' ID )* )? ( '<<' ID )? '{' ( ( method | field ) )* '}' ;
    public final void class_decl() throws RecognitionException {
        try {
            // grammar\\proto.g:67:5: ( 'class' ID ( '<' ID ( ',' ID )* )? ( '<<' ID )? '{' ( ( method | field ) )* '}' )
            // grammar\\proto.g:67:7: 'class' ID ( '<' ID ( ',' ID )* )? ( '<<' ID )? '{' ( ( method | field ) )* '}'
            {
            match(input,39,FOLLOW_39_in_class_decl544); 
            match(input,ID,FOLLOW_ID_in_class_decl546); 
            // grammar\\proto.g:67:18: ( '<' ID ( ',' ID )* )?
            int alt18=2;
            int LA18_0 = input.LA(1);

            if ( (LA18_0==40) ) {
                alt18=1;
            }
            switch (alt18) {
                case 1 :
                    // grammar\\proto.g:67:20: '<' ID ( ',' ID )*
                    {
                    match(input,40,FOLLOW_40_in_class_decl550); 
                    match(input,ID,FOLLOW_ID_in_class_decl552); 
                    // grammar\\proto.g:67:27: ( ',' ID )*
                    loop17:
                    do {
                        int alt17=2;
                        int LA17_0 = input.LA(1);

                        if ( (LA17_0==30) ) {
                            alt17=1;
                        }


                        switch (alt17) {
                    	case 1 :
                    	    // grammar\\proto.g:67:29: ',' ID
                    	    {
                    	    match(input,30,FOLLOW_30_in_class_decl556); 
                    	    match(input,ID,FOLLOW_ID_in_class_decl558); 

                    	    }
                    	    break;

                    	default :
                    	    break loop17;
                        }
                    } while (true);


                    }
                    break;

            }

            // grammar\\proto.g:67:42: ( '<<' ID )?
            int alt19=2;
            int LA19_0 = input.LA(1);

            if ( (LA19_0==41) ) {
                alt19=1;
            }
            switch (alt19) {
                case 1 :
                    // grammar\\proto.g:67:44: '<<' ID
                    {
                    match(input,41,FOLLOW_41_in_class_decl568); 
                    match(input,ID,FOLLOW_ID_in_class_decl570); 

                    }
                    break;

            }

            match(input,16,FOLLOW_16_in_class_decl575); 
            // grammar\\proto.g:67:59: ( ( method | field ) )*
            loop21:
            do {
                int alt21=2;
                int LA21_0 = input.LA(1);

                if ( ((LA21_0>=31 && LA21_0<=36)) ) {
                    alt21=1;
                }


                switch (alt21) {
            	case 1 :
            	    // grammar\\proto.g:67:61: ( method | field )
            	    {
            	    // grammar\\proto.g:67:61: ( method | field )
            	    int alt20=2;
            	    alt20 = dfa20.predict(input);
            	    switch (alt20) {
            	        case 1 :
            	            // grammar\\proto.g:67:63: method
            	            {
            	            pushFollow(FOLLOW_method_in_class_decl581);
            	            method();

            	            state._fsp--;


            	            }
            	            break;
            	        case 2 :
            	            // grammar\\proto.g:67:72: field
            	            {
            	            pushFollow(FOLLOW_field_in_class_decl585);
            	            field();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop21;
                }
            } while (true);

            match(input,17,FOLLOW_17_in_class_decl592); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "class_decl"


    // $ANTLR start "method"
    // grammar\\proto.g:70:1: method : type ID '(' arguments ')' '{' ( operator )* '}' ;
    public final void method() throws RecognitionException {
        try {
            // grammar\\proto.g:71:5: ( type ID '(' arguments ')' '{' ( operator )* '}' )
            // grammar\\proto.g:71:7: type ID '(' arguments ')' '{' ( operator )* '}'
            {
            pushFollow(FOLLOW_type_in_method613);
            type();

            state._fsp--;

            match(input,ID,FOLLOW_ID_in_method615); 
            match(input,14,FOLLOW_14_in_method617); 
            pushFollow(FOLLOW_arguments_in_method619);
            arguments();

            state._fsp--;

            match(input,15,FOLLOW_15_in_method621); 
            match(input,16,FOLLOW_16_in_method623); 
            // grammar\\proto.g:71:37: ( operator )*
            loop22:
            do {
                int alt22=2;
                int LA22_0 = input.LA(1);

                if ( (LA22_0==ID||LA22_0==16||LA22_0==23||(LA22_0>=43 && LA22_0<=45)||(LA22_0>=57 && LA22_0<=59)) ) {
                    alt22=1;
                }


                switch (alt22) {
            	case 1 :
            	    // grammar\\proto.g:71:39: operator
            	    {
            	    pushFollow(FOLLOW_operator_in_method627);
            	    operator();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop22;
                }
            } while (true);

            match(input,17,FOLLOW_17_in_method632); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "method"


    // $ANTLR start "field"
    // grammar\\proto.g:74:1: field : type ID ( '=' big_expression )? ';' ;
    public final void field() throws RecognitionException {
        try {
